--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="0dp"
+                android:visibility="invisible" />
 
             <FrameLayout
                 android:id="@android:id/tabcontent"
@@ -31,161 +32,35 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:id="@+id/tab3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:padding="40dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:text="How was your experience in the selected language?"
-                        android:textSize="16sp"
-                        app:fontFamily="serif"
-                        android:layout_gravity="center"
-                        android:gravity="center"/>
-
-                    <com.hsalf.smilerating.SmileRating
-                        android:id="@+id/q3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
-
-                <LinearLayout
                     android:id="@+id/tab2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_gravity="center"
-                    android:gravity="center"
-                    android:padding="40dp">
+                    android:gravity="center">
 
-                    <LinearLayout
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="25dp"
+                        android:gravity="center"
+                        android:text="Pick your favorite sport"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        app:fontFamily="casual" />
+
+                    <ListView
+                        android:id="@+id/sportslist"
                         android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:orientation="horizontal"
-                        android:weightSum="7">
-
-
-                        <Button
-                            android:id="@+id/lan1"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            app:srcCompat="@drawable/ic_launcher_foreground"
-                            tools:ignore="VectorDrawableCompat"
-                            android:text="Lan1"/>
-
-                        <Button
-                            android:id="@+id/lan2"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan2" />
-
-                        <Button
-                            android:id="@+id/lan3"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan3"/>
-
-                        <Button
-                            android:id="@+id/lan4"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan4"/>
-
-                        <Button
-                            android:id="@+id/lan5"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan5" />
-
-                        <Button
-                            android:id="@+id/lan6"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan6" />
-
-                        <Button
-                            android:id="@+id/lan7"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan7"/>
-
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:orientation="horizontal"
-                        android:weightSum="7">
-
-
-                        <Button
-                            android:id="@+id/lan8"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan8"/>
-
-                        <Button
-                            android:id="@+id/lan9"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan9" />
-
-                        <Button
-                            android:id="@+id/lan10"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan10" />
-
-                        <Button
-                            android:id="@+id/lan11"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan11"/>
-
-                        <Button
-                            android:id="@+id/lan12"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan12"/>
-
-                        <Button
-                            android:id="@+id/lan13"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan13" />
-
-                        <Button
-                            android:id="@+id/lan14"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Lan14" />
-
-
-                    </LinearLayout>
+                        android:layout_height="match_parent"
+                        android:divider="#dfdfdf"
+                        android:dividerHeight="1dp"
+                        android:layout_margin="15dp"/>
 
                 </LinearLayout>
+
 
                 <LinearLayout
                     android:id="@+id/tab1"
@@ -199,19 +74,106 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Can you rate your overall experience"
-                        android:textSize="16sp"
-                        app:fontFamily="serif"
-                        android:layout_marginBottom="10dp"
                         android:layout_gravity="center"
-                        android:gravity="center"/>
+                        android:layout_marginBottom="10dp"
+                        android:gravity="center"
+                        android:text="How will you rate your overall experience at the Store?"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        app:fontFamily="casual" />
 
-                    <com.hsalf.smilerating.SmileRating
-                        android:id="@+id/q1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ImageButton
+                            android:id="@+id/q1_ans_1"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/angry"
+                            android:scaleType="fitXY"
+                            android:background="@null"
+                            android:layout_marginRight="10dp"/>
+
+                        <ImageButton
+                            android:id="@+id/q1_ans_2"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/normal"
+                            android:scaleType="fitXY"
+                            android:background="@null"
+                            android:layout_marginRight="10dp"/>
+
+                        <ImageButton
+                            android:id="@+id/q1_ans_3"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/happy"
+                            android:scaleType="fitXY"
+                            android:background="@null"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/tab3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:padding="40dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="10dp"
+                        android:gravity="center"
+                        android:text="How satisfied were you with the range we offered for the particular sport?"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        app:fontFamily="casual" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ImageButton
+                            android:id="@+id/q3_ans_1"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/angry"
+                            android:scaleType="fitXY"
+                            android:background="@null"
+                            android:layout_marginRight="10dp"/>
+
+                        <ImageButton
+                            android:id="@+id/q3_ans_2"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/normal"
+                            android:scaleType="fitXY"
+                            android:background="@null"
+                            android:layout_marginRight="10dp"/>
+
+                        <ImageButton
+                            android:id="@+id/q3_ans_3"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/happy"
+                            android:scaleType="fitXY"
+                            android:background="@null"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+
 
             </FrameLayout>
         </LinearLayout>
